关闭通知(不知道为啥之前的会报错了,暂时不修,没什么用)
特别感谢“亮亮”请我喝的一杯奶茶

--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -15,4 +15,5 @@ jobs:
           GHTOKEN: ${{ secrets.GHTOKEN }}
           BOTTOKEN: ${{ secrets.BOTTOKEN }}
           CHATIDS: ${{ secrets.CHATIDS }}
-        run: bash -x ./scripts/notify.sh
+        # run: bash -x ./scripts/notify.sh
+        run: echo "暂时弃用通知"
